RESOLVED FIXED220034
iOS wheel events don't work on many websites
https://bugs.webkit.org/show_bug.cgi?id=220034
Summary iOS wheel events don't work on many websites
Tim Horton
Reported 2020-12-18 18:15:07 PST
iOS wheel events don't work on many websites
Attachments
Patch (13.17 KB, patch)
2020-12-18 18:17 PST, Tim Horton
no flags
Tim Horton
Comment 1 2020-12-18 18:17:42 PST
EWS
Comment 2 2020-12-18 20:31:23 PST
Committed r271000: <https://trac.webkit.org/changeset/271000> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416562 [details].
Radar WebKit Bug Importer
Comment 3 2020-12-18 20:32:18 PST
Note You need to log in before you can comment on or make changes to this bug.