Source/WebKit/Shared/ios/WebIOSEventFactory.h
@@ -32,6 +32,7 @@
 #import "WebWheelEvent.h"
 #import <UIKit/UIKit.h>
 #import <WebCore/WebEvent.h>
+#import <wtf/Optional.h>
 
 OBJC_CLASS UIScrollEvent;
 
@@ -41,7 +42,7 @@ public:
     static WebKit::WebMouseEvent createWebMouseEvent(::WebEvent *);
 
 #if HAVE(UISCROLLVIEW_ASYNCHRONOUS_SCROLL_EVENT_HANDLING)
-    static WebKit::WebWheelEvent createWebWheelEvent(UIScrollEvent *, UIView *contentView);
+    static WebKit::WebWheelEvent createWebWheelEvent(UIScrollEvent *, UIView *contentView, Optional<WebKit::WebWheelEvent::Phase> overridePhase = WTF::nullopt);
 #endif
 
     static UIKeyModifierFlags toUIKeyModifierFlags(OptionSet<WebKit::WebEvent::Modifier>);
